# leptos-ws-client

./: Cargo.toml  index.html
src/: js.rs  main.rs  models.rs  pages.rs
src/pages/: auth_page.rs  messages_page.rs
static/: socket.js
