[package]
name = "leptos-ws-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.6.15", features = ["csr", "nightly"], default-features = false }
serde = {features = ["derive"], version = "1.0.214"}
serde_json = "1.0.132"
web-sys = "0.3.70"
wasm-bindgen = {features = ["default"], version = "0.2.95"}
reqwasm = "0.5.0"
serde-wasm-bindgen = "0.6.5"
gloo-storage = {version = "0.3.0"}
leptos_router = { version = "0.6.15", features = ["csr"] }